Bug 36997 - [G45 SDVO] TV can't display
Summary: [G45 SDVO] TV can't display
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Daniel Vetter
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-09 02:23 UTC by bo.b.wang
Modified: 2017-10-06 14:52 UTC (History)
9 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg infomation (39.94 KB, text/plain)
2011-05-09 02:23 UTC, bo.b.wang
no flags Details
good card's drm.debug=0x6 dmesg info (90.32 KB, text/plain)
2011-05-13 01:00 UTC, bo.b.wang
no flags Details
bad card (no working) drm.debug=0x6 dmesg info (59.21 KB, text/plain)
2011-05-13 01:02 UTC, bo.b.wang
no flags Details
Treat YRPB as a TV (1.91 KB, patch)
2011-05-13 03:00 UTC, Chris Wilson
no flags Details | Splinter Review
dmesg of G45B with S-VIDEO (50.13 KB, text/plain)
2012-04-05 01:41 UTC, Guang Yang
no flags Details
dmesg after booting WITH S-VIEDO (50.62 KB, text/plain)
2012-04-09 01:48 UTC, Guang Yang
no flags Details
booting with S-Viedo drm.debug=0xe dmesg info (94.98 KB, text/plain)
2012-05-08 19:21 UTC, Guang Yang
no flags Details
dmesg info with patch (113.12 KB, text/plain)
2012-10-30 06:18 UTC, Guang Yang
no flags Details
Increase the delay between SDVO response polling (1.21 KB, patch)
2012-11-21 10:20 UTC, Chris Wilson
no flags Details | Splinter Review
dmesg info with chris's patch (120.31 KB, text/plain)
2012-11-23 05:36 UTC, Guang Yang
no flags Details
screenshot of login (2.03 MB, image/jpeg)
2013-03-19 04:32 UTC, cancan,feng
no flags Details

Description bo.b.wang 2011-05-09 02:23:10 UTC
Created attachment 46468 [details]
dmesg infomation

System Environment:
--------------------------
(drm-intel-fixes)dabc8ce34938f9fa2929f51d9fab730e78bd2184
platform  piketon
s-video to TV

Bug detailed description:
-------------------------
TV display normally during bios phase. After loading drm driver, the 
TV can't display any things.

parts of dmesg info are: 

[drm] Initialized drm 1.1.0 20060810
[drm] MTRR allocation failed.  Graphics performance may suffer.
[drm] Supports vblank timestamp caching Rev 1 (10.10.2010).
[drm] Driver supports precise vblank timestamp query.
[drm] Cannot find any crtc or sizes - going 1024x768   


Reproduce steps:
----------------
1.s-video port
2.boot a machine
Comment 1 Chris Wilson 2011-05-09 03:01:29 UTC
Right, this is the fallout that we expected from

commit a03357d971b03cf5303d2cdf226ad24de0a044d8
Author: Zhao Yakui <yakui.zhao@intel.com>
Date:   Sun Apr 17 09:04:54 2011 +0100

    drm/i915/tv: Clear state sense detection for Cantiga

Can you please confirm by reverting a03357d9?
Comment 2 bo.b.wang 2011-05-09 18:36:52 UTC
(In reply to comment #1)
> Right, this is the fallout that we expected from
> 
> commit a03357d971b03cf5303d2cdf226ad24de0a044d8
> Author: Zhao Yakui <yakui.zhao@intel.com>
> Date:   Sun Apr 17 09:04:54 2011 +0100
> 
>     drm/i915/tv: Clear state sense detection for Cantiga
> 
> Can you please confirm by reverting a03357d9?

Hello Chris. I have tested commit a03357d9?  and there is the same issue
Comment 3 Chris Wilson 2011-05-09 23:12:34 UTC
Do you mean you did:
 
  git checkout a03357d9

or

  git checkout a03357d9^

?

It's the latter that I want tested (actually both ;) as that will confirm a03357d9 introduces the regression.
Comment 4 bo.b.wang 2011-05-11 01:29:42 UTC
(In reply to comment #3)
> Do you mean you did:
> 
>   git checkout a03357d9
> 
> or
> 
>   git checkout a03357d9^
> 
> ?
> 
> It's the latter that I want tested (actually both ;) as that will confirm
> a03357d9 introduces the regression.

Hello Chris, I have tested a03357d9 and a03357d9^(31acbcc408f412d1ba73765b846c38642be553c3), and there is the same issue
Comment 5 bo.b.wang 2011-05-11 01:31:17 UTC
(In reply to comment #3)
> Do you mean you did:
> 
>   git checkout a03357d9
> 
> or
> 
>   git checkout a03357d9^
> 
> ?
> 
> It's the latter that I want tested (actually both ;) as that will confirm
> a03357d9 introduces the regression.
(In reply to comment #1)
> Right, this is the fallout that we expected from
> 
> commit a03357d971b03cf5303d2cdf226ad24de0a044d8
> Author: Zhao Yakui <yakui.zhao@intel.com>
> Date:   Sun Apr 17 09:04:54 2011 +0100
> 
>     drm/i915/tv: Clear state sense detection for Cantiga
> 
> Can you please confirm by reverting a03357d9?

git revert a03357d9 failed
Comment 6 Chris Wilson 2011-05-11 01:39:10 UTC
Ok, so the bug is unrelated to the TV-state sense detection disabling commit.

Do we have a clue as to what timeframe the bug was introduced? Just check 2.6.38, 2.6.37, 2.6.36 and so on, until the TV out detection works (if ever!)
Comment 7 bo.b.wang 2011-05-11 19:25:04 UTC
(In reply to comment #6)
> Ok, so the bug is unrelated to the TV-state sense detection disabling commit.
> 
> Do we have a clue as to what timeframe the bug was introduced? Just check
> 2.6.38, 2.6.37, 2.6.36 and so on, until the TV out detection works (if ever!)

Hello Chris: Today I borrow another SDVO_S-vedio card and try it.It works well. But How weird that the first SDVO S-vedio card can't work only after loading DRM ?
Comment 8 Chris Wilson 2011-05-11 23:55:32 UTC
Oh, of course it would be SDVO... Hmm, we don't have too much control over whether the add-in card detects successfully or not. Can you repeat the experiment (replace the original ADD2 card, then retry with the working ADD2) and see if the behaviour remains the same? If you can find another card, try that as well.

In the meantime a drm.debug=0x6 dmesg with the non-working card would be useful just in case the hardware is reporting something peculiar.
Comment 9 bo.b.wang 2011-05-12 01:14:14 UTC
(In reply to comment #8)
> Oh, of course it would be SDVO... Hmm, we don't have too much control over
> whether the add-in card detects successfully or not. Can you repeat the
> experiment (replace the original ADD2 card, then retry with the working ADD2)
> and see if the behaviour remains the same? If you can find another card, try
> that as well.
> 
> In the meantime a drm.debug=0x6 dmesg with the non-working card would be useful
> just in case the hardware is reporting something peculiar.

Hello Chris. Do you mean that hotplug original ADD2 card with working ADD2 card?
Comment 10 Chris Wilson 2011-05-12 02:00:54 UTC
I wouldn't hotplug it... ;-) But yes, swap back the original and recheck if it fails again.

I'm hoping we can write this off to misbehaving hardware...
Comment 11 bo.b.wang 2011-05-13 01:00:46 UTC
Created attachment 46666 [details]
good card's drm.debug=0x6  dmesg info

this is working card's dmesg
Comment 12 bo.b.wang 2011-05-13 01:02:59 UTC
Created attachment 46667 [details]
bad card (no working) drm.debug=0x6 dmesg info

this is bad(no working) card dmesg info with drm.debug=0x6
Comment 13 Chris Wilson 2011-05-13 02:11:26 UTC
Looks like the "misbehaving" card is reporting the TV as a different output type [16, YPRPB?] and the working card reports it as an S-Video output[8].
Comment 14 Chris Wilson 2011-05-13 03:00:11 UTC
Created attachment 46672 [details] [review]
Treat YRPB as a TV
Comment 15 bo.b.wang 2011-08-12 00:28:37 UTC
(In reply to comment #14)
> Created an attachment (id=46672) [details]
> Treat YRPB as a TV
hello, this issue doesn't exists in this patch. Test-by: Wang Bo bo.b.wang@intel.com
Comment 16 Daniel Vetter 2012-03-31 08:11:22 UTC
Patch is merged to drm-intel-next-queued as

commit 076d0f0f554f6f9c41248f097c31fe86454c5616
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Sep 30 22:56:41 2011 +0100

    drm/i915/sdvo: Include YRPB as an additional TV output type
Comment 17 Yi Sun 2012-03-31 18:11:48 UTC
(In reply to comment #16)
> Patch is merged to drm-intel-next-queued as
> 

Strange, I didn't find this patch in -queued branch. Did you push it?

> commit 076d0f0f554f6f9c41248f097c31fe86454c5616
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Fri Sep 30 22:56:41 2011 +0100
> 
>     drm/i915/sdvo: Include YRPB as an additional TV output type
Comment 18 Daniel Vetter 2012-04-01 01:27:16 UTC
> --- Comment #17 from sunyi <yi.sun@intel.com> 2012-03-31 18:11:48 PDT ---
> (In reply to comment #16)
> > Patch is merged to drm-intel-next-queued as
> > 
> 
> Strange, I didn't find this patch in -queued branch. Did you push it?

Oops, I've forgotten to do that. Pushed.
Comment 19 Guang Yang 2012-04-05 01:41:23 UTC
Created attachment 59508 [details]
dmesg of G45B with S-VIDEO

   I try with 
Kernel: (drm-intel-next-queue)d9c33f85cf3cc3f8717e56d42fd678573ed1727d3 
which include the patch ,the bug still occurs,when I boot the machine with S-VIDEO ,the TV screen will trun to be black after loading drm driver.
    but I try the 
Kernel: (drm-intel-fixes)b250da79a0c972ef7f6d58ebd1083cab066e6c82
the issue don't occur.
    BTW,the tile of this bug's platform is G45,but in the describe of the enviroment is piketon,I'm puzzled with this, and I test with G45.
Comment 20 Daniel Vetter 2012-04-05 01:48:31 UTC
> --- Comment #19 from yangguang <guang.a.yang@intel.com> 2012-04-05 01:41:23 PDT ---
> Created attachment 59508 [details]
>  --> https://bugs.freedesktop.org/attachment.cgi?id=59508
> dmesg of G45B with S-VIDEO
>
>   I try with
> Kernel: (drm-intel-next-queue)d9c33f85cf3cc3f8717e56d42fd678573ed1727d3
> which include the patch ,the bug still occurs,when I boot the machine with
> S-VIDEO ,the TV screen will trun to be black after loading drm driver.
>    but I try the
> Kernel: (drm-intel-fixes)b250da79a0c972ef7f6d58ebd1083cab066e6c82
> the issue don't occur.
>    BTW,the tile of this bug's platform is G45,but in the describe of the
> enviroment is piketon,I'm puzzled with this, and I test with G45.

This is really confusing because neither of these two trees contains
the patch. I'll push out a new -testing branch today anyway for the
next QA cycle, please retest on that on.
Comment 21 Daniel Vetter 2012-04-05 02:40:38 UTC
Ok, I've confused the issue with another one. Can you please double-check this issue? I don't have the -next-queued commit sha1 you've referred to.

And if the issue really still exist, _please_ reopen the bug report.
Comment 22 Guang Yang 2012-04-05 20:09:02 UTC
(In reply to comment #21)
> Ok, I've confused the issue with another one. Can you please double-check this
> issue? I don't have the -next-queued commit sha1 you've referred to.
> And if the issue really still exist, _please_ reopen the bug report.
   Sorry,daniel, here is a mistake about the -next-queued commit I test with,the commit should be:
Kernel: (drm-intel-next-queued)9c33f85cf3cc3f8717e56d42fd678573ed1727d3
I print a wrong brace. 
   BTW,I will try this bug with the next QA cycle.
Comment 23 Guang Yang 2012-04-09 01:48:47 UTC
Created attachment 59668 [details]
dmesg after booting WITH S-VIEDO

 On new round of QA cycle,I try with 
Kernel: (drm-intel-testing)295633246f8922f550971f810f09244a450b4ca6
the bug still occurs,
Comment 24 Chris Wilson 2012-04-14 07:11:30 UTC
fatal: bad object 295633246f8922f550971f810f09244a450b4ca6
So what exactly did you test?
Comment 25 Guang Yang 2012-04-16 03:24:01 UTC
(In reply to comment #24)
> fatal: bad object 295633246f8922f550971f810f09244a450b4ca6
> So what exactly did you test?
   I'm sure the kernel commit I test with is like this,
Kernel: (drm-intel-testing)295633246f8922f550971f810f09244a450b4ca6
Some additional commit info:
Merge: 9c33f85 b4db1e3
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Thu Apr 5 11:32:57 2012 +0200

   like daniel do a revert after that,I try again with the newest -testing branch: Kernel: (drm-intel-testing)9d0b5b5468650e0ac72a7786cf6625963f926d4d 
the bug still occurs.
Comment 26 Daniel Vetter 2012-05-05 07:16:36 UTC
Yuang, can you please attach a new dmesg with drm.debug=0xe when running this on the next QA testing cycle? If the patch I've merged does not fix the bug, it's likely that something slightly changed.
Comment 27 Guang Yang 2012-05-08 19:21:06 UTC
Created attachment 61259 [details]
booting with S-Viedo drm.debug=0xe dmesg info

I try the new QA testing cycle with 
Kernel: (drm-intel-testing)25fcc53b96dd4801907d9b1cc4b76258ab0f3d65
the TV screen will trun to be black after loading drm driver.
 And I attach a dmesg with drm.debug=0xe
Comment 28 Florian Mickler 2012-07-01 03:49:27 UTC
A patch referencing this bug report has been merged in Linux v3.5-rc1:

commit a0b1c7a5197293d6206b245b45edc3f508aadab6
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Sep 30 22:56:41 2011 +0100

    drm/i915/sdvo: Include YRPB as an additional TV output type
Comment 29 Chris Wilson 2012-10-21 14:30:31 UTC
Timeout. Please do reopen if you can still reproduce the issue and help us diagnose the problem, thanks.
Comment 30 Gordon Jin 2012-10-23 05:11:40 UTC
reopening. I don't know why this closed.
Comment 31 Chris Wilson 2012-10-23 08:06:23 UTC
(In reply to comment #30)
> reopening. I don't know why this closed.

Because it was left in the NEEDINFO state for almost 6 months.
Comment 32 Chris Wilson 2012-10-23 08:44:31 UTC
[  173.740078] [drm:output_poll_execute], [CONNECTOR:5:VGA-1] status updated from 2 to 2
[  173.740082] [drm:intel_sdvo_debug_write], SDVOC: W: 0B                         (SDVO_CMD_GET_ATTACHED_DISPLAYS)
[  173.771594] [drm:intel_sdvo_read_response], SDVOC: R: (Pending)... failed
[  173.776925] [drm:output_poll_execute], [CONNECTOR:61:VGA-2] status updated from 3 to 3

It looks like we need to learn how to flush the SDVO comms, or maybe try harder to read after a Pending.
Comment 33 Chris Wilson 2012-10-23 08:48:52 UTC
First thought is something as silly as:

diff --git a/drivers/gpu/drm/i915/intel_sdvo.c b/drivers/gpu/drm/i915/intel_sdvo.c
index 0007a4d..ac1a8a8 100644
--- a/drivers/gpu/drm/i915/intel_sdvo.c
+++ b/drivers/gpu/drm/i915/intel_sdvo.c
@@ -523,13 +523,22 @@ static bool intel_sdvo_read_response(struct intel_sdvo *intel_sdvo,
 				  &status))
 		goto log_fail;
 
-	while (status == SDVO_CMD_STATUS_PENDING && retry--) {
-		udelay(15);
-		if (!intel_sdvo_read_byte(intel_sdvo,
-					  SDVO_I2C_CMD_STATUS,
-					  &status))
-			goto log_fail;
-	}
+	do {
+		int quick = 5;
+
+		while (status == SDVO_CMD_STATUS_PENDING && quick--) {
+			udelay(15);
+			if (!intel_sdvo_read_byte(intel_sdvo,
+						  SDVO_I2C_CMD_STATUS,
+						  &status))
+				goto log_fail;
+		}
+
+		if (status != SDVO_CMD_STATUS_PENDING || --loop == 0)
+			break;
+
+		msleep(15);
+	} while (1);
 
 	if (status <= SDVO_CMD_STATUS_SCALING_NOT_SUPP)
 		DRM_LOG_KMS("(%s)", cmd_status_names[status]);

But rumour has it, Daniel has the actual SDVO specs...
Comment 34 Daniel Vetter 2012-10-29 20:27:02 UTC
Please retest with latest dinq, specifically

commit 420a2882dd57653d305b801a5137935d46ef28f9
Author: Damien Lespiau <damien.lespiau@intel.com>
Date:   Mon Oct 29 15:25:35 2012 +0000

    drm/i915/tv: Use intel_flush_display_plane() to flush the primary plane
Comment 35 Guang Yang 2012-10-30 06:18:43 UTC
Created attachment 69285 [details]
dmesg info with patch

(In reply to comment #34)
> Please retest with latest dinq, specifically
> 
> commit 420a2882dd57653d305b801a5137935d46ef28f9
> Author: Damien Lespiau <damien.lespiau@intel.com>
> Date:   Mon Oct 29 15:25:35 2012 +0000
> 
>     drm/i915/tv: Use intel_flush_display_plane() to flush the primary plane
I try with the newest -queued kernel including this patch :
Kernel: (drm-intel-next-queued)806865d4fe74cda9ac19a09138a54b11fb220007
the issue still occurs and I attach the dmesg.
Comment 36 Chris Wilson 2012-10-31 10:12:02 UTC
For a really simple test, just replace the udelay(15) there with a mdelay(15).
Comment 37 Chris Wilson 2012-11-21 10:20:17 UTC
Created attachment 70357 [details] [review]
Increase the delay between SDVO response polling

It is not clear whether you ever tested the attached patch. Please do so.
Comment 38 Guang Yang 2012-11-23 05:36:42 UTC
Created attachment 70467 [details]
dmesg info with chris's patch

(In reply to comment #37)
> Created attachment 70357 [details] [review] [review]
> Increase the delay between SDVO response polling
> 
> It is not clear whether you ever tested the attached patch. Please do so.
I try the patch with newest -queued branch, the issue still occurs and I attach the dmesg
Comment 39 Chris Wilson 2012-11-23 08:33:41 UTC
Well, the good news, Daniel, is that the patch works - it allows us to read back SDVO responses from the TV. The bad news is that the EDID turns out to be garbage - but all the other SDVO commands appear to be working, so probably a similar timing issue inside the DCC probe.
Comment 40 Chris Wilson 2012-11-23 08:54:33 UTC
(In reply to comment #38)
> Created attachment 70467 [details]
> dmesg info with chris's patch
> 
> (In reply to comment #37)
> > Created attachment 70357 [details] [review] [review] [review]
> > Increase the delay between SDVO response polling
> > 
> > It is not clear whether you ever tested the attached patch. Please do so.
> I try the patch with newest -queued branch, the issue still occurs and I
> attach the dmesg

What issue occurs? The TV is detected now on S-VIDEO1 and we have modes. (It appears the garbage is being returned for SDVO/LVDS and that appears to be incorrect error handling within drm_edid.c). So can you please enlighten us on how the system now behaves?
Comment 41 Guang Yang 2012-11-24 04:56:11 UTC
(In reply to comment #40)
> (In reply to comment #38)
> > Created attachment 70467 [details]
> > dmesg info with chris's patch
> > 
> > (In reply to comment #37)
> > > Created attachment 70357 [details] [review] [review] [review] [review]
> > > Increase the delay between SDVO response polling
> > > 
> > > It is not clear whether you ever tested the attached patch. Please do so.
> > I try the patch with newest -queued branch, the issue still occurs and I
> > attach the dmesg
> 
> What issue occurs? The TV is detected now on S-VIDEO1 and we have modes. (It
> appears the garbage is being returned for SDVO/LVDS and that appears to be
> incorrect error handling within drm_edid.c). So can you please enlighten us
> on how the system now behaves?
when I boot the machine with S-VIDEO ,the TV screen will trun to be black after loading drm driver.
Comment 42 Chris Wilson 2012-11-24 09:27:57 UTC
As we now appear to be talking to the TV, have you checked whether any of the reported modes work?
Comment 43 Guang Yang 2012-11-26 07:09:16 UTC
(In reply to comment #42)
> As we now appear to be talking to the TV, have you checked whether any of
> the reported modes work?
I fail to let any modes work.
Comment 44 Chris Wilson 2012-11-28 11:55:35 UTC
Ok, looks like we have a deeper problem controlling this device -- though we are now at least successfully communicating.
Comment 45 Florian Mickler 2012-12-22 09:21:24 UTC
A patch referencing this bug report has been merged in Linux v3.8-rc1:

commit fc37381cc8ae2c24b8ece33659e69a0605ca074c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Nov 23 11:57:56 2012 +0000

    drm/i915: Increase the response time for slow SDVO devices
Comment 46 Jani Nikula 2013-01-09 09:07:39 UTC
(In reply to comment #45)
> A patch referencing this bug report has been merged in Linux v3.8-rc1:
> 
> commit fc37381cc8ae2c24b8ece33659e69a0605ca074c
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Fri Nov 23 11:57:56 2012 +0000
> 
>     drm/i915: Increase the response time for slow SDVO devices

Although a quite similar patch has been tried already, please re-test with v3.8-rc1 anyway to confirm this is still an issue.
Comment 47 Guang Yang 2013-01-10 02:16:01 UTC
(In reply to comment #46)
> (In reply to comment #45)
> > A patch referencing this bug report has been merged in Linux v3.8-rc1:
> > 
> > commit fc37381cc8ae2c24b8ece33659e69a0605ca074c
> > Author: Chris Wilson <chris@chris-wilson.co.uk>
> > Date:   Fri Nov 23 11:57:56 2012 +0000
> > 
> >     drm/i915: Increase the response time for slow SDVO devices
> 
> Although a quite similar patch has been tried already, please re-test with
> v3.8-rc1 anyway to confirm this is still an issue.

I try with the newest 3.8-rc2 kernel, the issue still occurs.The testing kernel is:
Kernel: (drm-intel-nightly)84814cd0d035c0da5a5d55c07309a85a1e524d4f
Comment 48 Chris Wilson 2013-03-15 13:33:07 UTC
Can you please retest with the G45 cursor plane w/a -- try drm-intel-nightly?
Comment 49 cancan,feng 2013-03-19 04:32:00 UTC
Created attachment 76734 [details]
screenshot of login
Comment 50 cancan,feng 2013-03-19 04:42:36 UTC
(In reply to comment #48)
> Can you please retest with the G45 cursor plane w/a -- try drm-intel-nightly?

Hi, I try drm-intel-nightly, and found that the issue still there but some different. After bios phase, screen start to flicker. I attached screenshot in the attachment.

Kernel info as follows:
----------------------------
Kernel: (drm-intel-nightly)1c00d801aed3f4712209835d67a5a37d980433e7
Some additional commit info:
Merge: 03b5c6c 8698080
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Wed Mar 13 21:52:37 2013 +0100

By the way, can you please tell me if HDMI can work well with S-DVI card plugged in? Because HDMI display nothing with S-DVI card plugged in, I don't know if this is normal or just my wrong operation...
Comment 51 cancan,feng 2013-03-19 05:00:10 UTC
(In reply to comment #50)
> (In reply to comment #48)
> > Can you please retest with the G45 cursor plane w/a -- try drm-intel-nightly?
> 
> Hi, I try drm-intel-nightly, and found that the issue still there but some
> different. After bios phase, screen start to flicker. I attached screenshot
> in the attachment.
> 
> Kernel info as follows:
> ----------------------------
> Kernel: (drm-intel-nightly)1c00d801aed3f4712209835d67a5a37d980433e7
> Some additional commit info:
> Merge: 03b5c6c 8698080
> Author: Daniel Vetter <daniel.vetter@ffwll.ch>
> Date:   Wed Mar 13 21:52:37 2013 +0100
> 
> By the way, can you please tell me if HDMI can work well with S-DVI card

I'm sorry, it's SDVO not S-DVI, my spelling mistake

> plugged in? Because HDMI display nothing with S-DVI card plugged in, I don't
> know if this is normal or just my wrong operation...
Comment 52 Daniel Vetter 2013-03-20 11:43:38 UTC
Shot in the dark: Can you please try the below patch?

http://cgit.freedesktop.org/~danvet/drm/commit/?h=pll-limits-mess&id=e249fd0e4aacff8d7294b118763d504ab9f4e0d5
Comment 53 cancan,feng 2013-03-21 02:31:12 UTC
(In reply to comment #52)
> Shot in the dark: Can you please try the below patch?
> http://cgit.freedesktop.org/~danvet/drm/commit/?h=pll-limits-
> mess&id=e249fd0e4aacff8d7294b118763d504ab9f4e0d5

Hi, Daniel, with this patch the issue still there and seem more flicker.:'(
Comment 54 Daniel Vetter 2013-04-24 15:08:35 UTC
Can you please test the fdi-dither branch from my private git repo at:

http://cgit.freedesktop.org/~danvet/drm
Comment 55 cancan,feng 2013-04-28 05:38:39 UTC
(In reply to comment #54)
> Can you please test the fdi-dither branch from my private git repo at:
> 
> http://cgit.freedesktop.org/~danvet/drm

I have tested fdi-dither branch, this issue fixed on this branch. So, we can close this bug.
Comment 56 Chris Wilson 2013-06-12 14:38:09 UTC
I think that has landed upstream.
Comment 57 shui yangwei 2013-06-13 06:58:56 UTC
(In reply to comment #56)
> I think that has landed upstream.

I have tested latest -next-queued kernel, the sdvo port worked well. I verified it here.
Comment 58 Elizabeth 2017-10-06 14:52:43 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.